# ironscope

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
docker/: Dockerfile.release
docs/architecture/: runtime-tool-context.md
docs/quickstart/: langchain-shell-tool.md
examples/: langgraph_tool_execution_daemon.py
examples/policies/: langchain-enforce.yaml  langchain-monitor.yaml  langgraph-tool-execution-enforce.yaml  unknown-tool-deny.yaml
ironscope/: Cargo.toml  build.rs
ironscope-common/: Cargo.toml  build.rs
ironscope-common/src/: buffer.rs  lib.rs  path.rs  types.rs  utils.rs
ironscope-common/src/co_re/: gen.rs  mod.rs
ironscope-common/src/co_re/c-bindings/: c-types.h  shim.c
ironscope-ebpf/: Cargo.toml  build.rs  rust-toolchain.toml
ironscope-ebpf/src/: alloc.rs  code_classifier.rs  event_emit.rs  fork_probes.rs  frame_probes.rs  lifecycle.rs  lsm_hooks.rs  main.rs  maps.rs  ownership.rs  task_probes.rs  tool_identity.rs  worker_probes.rs
ironscope/src/: compiler.rs  config.rs  final_state.rs  main.rs  python_symbols.rs  rules.rs
ironscope/src/python_runtime/: cpython.rs  cpython_312.rs  langchain.rs  mod.rs  process_reader.rs  resolver.rs
scripts/: enable-bpf-lsm.sh
tests/: async_lifecycle_agent.py  child_scope_agent.py  default_tool_policy_agent.py  e2e_async_lifecycle_case.sh  e2e_async_suspended_tool_idle_context.sh  e2e_default_tool_policy.sh  e2e_idle_child_not_protected.sh  e2e_langchain_first_call_unknown_policy.sh  e2e_langchain_tool_policy.sh  e2e_langgraph_tool_execution_daemon.sh  e2e_resource_policy_case.sh  e2e_worker_lifecycle_case.sh  langchain_first_call_unknown_policy_agent.py  langchain_tool_policy_agent.py  resource_policy_agent.py  verify_quickstart_docs.py  verify_release_packaging.py  worker_lifecycle_agent.py
tests/scenarios/: async_suspended_tool_idle_context.py
tests/verifiers/: audit_assertions.py
tools/: resolve_symbols.py  verify_offsets.py
tools/python-contracts/: cpython-3.12.3-aarch64-f44e82bd43207357844bfae18cf0460f0825d1ae.json  index.json
tools/rules/: framework_rules.yaml
